added maven repo to our own bintray binarta repo as a fallback until the other artifacts are included in jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,10 @@ subprojects {
 
     repositories {
         if(!releaseBuild) mavenLocal()
-        mavenCentral()
         jcenter()
+        maven url:"http://dl.bintray.com/binarta/maven"
+        mavenCentral()
+
     }
 
     task sourcesJar(type: Jar) {
