use proper gradle syntax

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ subprojects {
     repositories {
         if(!releaseBuild) mavenLocal()
         jcenter()
-        maven url:"http://dl.bintray.com/binarta/maven"
+        maven {
+            url "http://dl.bintray.com/binarta/maven"
+        }
         mavenCentral()
 
     }
